<resources>
    <string name="FIGHT_COVID">Fight</string>
    <string name="Next">Next>></string>
    <string name="SKKRTTT">SKKKRRRTTT Jaga Kesehatan Bro !</string>
    <string name="SKKRRTT">DAMJAGO</string>
    <string name="cuci">Cuci Tangan</string>
    <string name="judulcuci">CUCI TANGAN</string>
    <string name="copyright">\@admhmwan</string>
    <string name="cuciapa">Cucilah tangan dengan air mengalir dan sabun, setidaknya selama 20 detik. Pastikan seluruh bagian tangan tercuci hingga bersih, termasuk punggung tangan, pergelangan tangan, sela-sela jari, dan kuku.  Setelah itu, keringkan tangan menggunakan tisu, handuk bersih, atau mesin pengering tangan.</string>
    <string name="masker">Gunakan Masker</string>
    <string name="Pola">Pola Hidup Sehat</string>
    <string name="maskerl">"Pemerintah telah menginstruksikan penggunaan masker kepada warganya saat berada di luar rumah, sebagai salah satu upaya pencegahan penularan virus corona.  Bahkan, masker non-medis, seperti masker kain sangat disarankan untuk digunakan.  Sementara penggunaan masker medis, ditegaskan hanya untuk para tenaga medis yang berhadapan langsung dengan penanganan wabah Covid-19 ini. "</string>
    <string name="polaa">Untuk terakhir yaitu kita harus menjaga pola makan , olahraga teratur dan pastikan selalu mendapat sinar matahari (Vitamin D) yang cukup untuk daya tahan tubuh kita</string>
    <string name="exit">"EXIT>>"</string>
</resources>