<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#EFE6E6"
    >

    <TextView
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pola"
        />

    <ImageView
        android:layout_width="197dp"
        android:layout_height="274dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/sun"

        />

    <TextView
        android:textAlignment="center"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polaa"
        />

    <TextView
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="6pt"
        android:text="@string/copyright"
        android:textColor="@android:color/background_dark"
        />

</LinearLayout>