<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#EFE6E6"
    >

    <TextView
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuci"
        />

    <ImageView
        android:layout_width="213dp"
        android:layout_height="254dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/cuci"

        />

    <TextView
        android:textAlignment="center"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuciapa"
        />

    <TextView
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="6pt"
        android:text="@string/copyright"
        android:textColor="@android:color/background_dark"
        />

</LinearLayout>